--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,6 +24,28 @@
   year={1950},
   publisher={American Association of Physics Teachers}
 }
+@article{panero2021wudg,
+  abbr={TAC},
+  bibtex_show={true},
+  title={A closed model structure on the category of weakly unital dg categories, II},
+  author={Panero, Piergiorgio and Shoikhet, Boris},
+  journal={Theory and Application of Categories},
+  volume={37},
+  number={15},
+  pages={388--417},
+  year={2021}
+}
+@article{panero2022wudg,
+  abbr={TAC},
+  bibtex_show={true},
+  title={The closed model structure on the category of weakly unital dg categories: an addendum},
+  author={Panero, Piergiorgio and Shoikhet, Boris},
+  journal={Theory and Application of Categories},
+  volume={38},
+  number={5},
+  pages={135--155},
+  year={2022}
+}
 
 @article{PhysRev.47.777,
   abbr={PhysRev},
