--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,8 @@
   volume={37},
   number={15},
   pages={388--417},
-  year={2021}
+  year={2021},
+  selected={true}
 }
 @article{panero2022wudg,
   abbr={TAC},
@@ -44,7 +45,8 @@
   volume={38},
   number={5},
   pages={135--155},
-  year={2022}
+  year={2022},
+  selected={true}
 }
 
 @article{PhysRev.47.777,
@@ -65,8 +67,7 @@
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   pdf={example_pdf.pdf},
   altmetric={248277},
-  dimensions={true},
-  selected={true}
+  dimensions={true}
 }
 
 @article{einstein1905molekularkinetischen,
