--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,6 +34,7 @@
   number={15},
   pages={388--417},
   year={2021},
+  html={http://www.tac.mta.ca/tac/volumes/37/15/37-15abs.html},
   selected={true}
 }
 @article{panero2022wudg,
@@ -46,6 +47,7 @@
   number={5},
   pages={135--155},
   year={2022},
+  html={http://www.tac.mta.ca/tac/volumes/38/5/38-05abs.html}
   selected={true}
 }
 
