--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
   number={5},
   pages={135--155},
   year={2022},
-  html={http://www.tac.mta.ca/tac/volumes/38/5/38-05abs.html}
+  html={http://www.tac.mta.ca/tac/volumes/38/5/38-05abs.html},
   selected={true}
 }
 
