--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,6 +35,7 @@
   pages={388--417},
   year={2021},
   html={http://www.tac.mta.ca/tac/volumes/37/15/37-15abs.html},
+  pdf={38-05.pdf},
   selected={true}
 }
 @article{panero2022wudg,
@@ -48,6 +49,7 @@
   pages={135--155},
   year={2022},
   html={http://www.tac.mta.ca/tac/volumes/38/5/38-05abs.html},
+  pdf={37-15.pdf}
   selected={true}
 }
 
