--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,7 +49,7 @@
   pages={135--155},
   year={2022},
   html={http://www.tac.mta.ca/tac/volumes/38/5/38-05abs.html},
-  pdf={panero2022wudg.pdf}
+  pdf={panero2022wudg.pdf},
   selected={true}
 }
 
