--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,7 +36,8 @@
   year={2021},
   html={http://www.tac.mta.ca/tac/volumes/37/15/37-15abs.html},
   pdf={panero2021wudg.pdf},
-  selected={true}
+  selected={true},
+  preview={wudg.jpg}
 }
 @article{panero2022wudg,
   abbr={TAC},
